--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 /.settings/*.xml
 /src/Debug/*
 /.settings/*.xml
+/src/fb.bat
+/src/pmas_foe.vcxproj_Debug_x86.bff
+/src/pmas_foe.vcxproj_Debug_x86.windows.fdb
